--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.bluepapa32:gradle-watch-plugin:0.1.3'
+        classpath 'com.eriwen:gradle-js-plugin:1.12.1'
     }
 }
 
-apply from: "scripts/dev.gradle"
+apply from: 'scripts/dev.gradle'
+apply from: 'scripts/js.gradle'
