--- a/scripts/dev.gradle
+++ b/scripts/dev.gradle
@@ -27,10 +27,10 @@ watch {
         files files('src/main/groovy')
         tasks 'compileGroovy'
     }
-    assets {
-        files files('src/main/resources')
-        tasks 'processResources'
-    }
+//    assets {
+//        files files('src/main/resources')
+//        tasks 'processResources'
+//    }
 }
 
 task watchThread() << {
