--- a/scripts/js.gradle
+++ b/scripts/js.gradle
@@ -15,19 +15,57 @@ jshint {
 watch {
     assets {
         files files('src/main/resources')
-        tasks 'processResources'
+        tasks 'setupSpec'
+    }
+    jsTest {
+        files files('src/test/javaScript')
+        tasks 'setupSpec'
     }
 }
 
-//task jsTest(type: com.eriwen.gradle.js.tasks.CombineJsTask) {
-//    source = fileTree(
-//            dir: 'src/main/resources/assets/js/', include: '*.js'
-//    )
-////    source = ["${projectDir}/js/file1.js", "${projectDir}/js/file2.js"]
-//    dest = file("${buildDir}/all-debug.js")
+//combineJs {
+//    source = scripts
+//    dest = file("${buildDir}/jsTest/all.js")
 //}
 
-combineJs {
-    source = scripts
-    dest = file("src/main/resources/test/all.js")
+task copyJs(type: Copy) {
+    from 'src/main/resources/assets/js'
+    into "${buildDir}/jsTest/js"
 }
+
+task copyJsSpec(type: Copy) {
+    from 'src/test/javaScript'
+    into "${buildDir}/jsTest"
+    exclude 'index.htm'
+}
+
+String specPath = 'src/test/javaScript/spec/'
+String specTags = fileTree(specPath).collect {
+    String path = it.path.split(specPath)[1]
+    "<script type='text/javascript' src='/spec/${path}'></script>"
+}.join('\n')
+
+String sourcePath = 'src/main/resources/assets/js/'
+String sourceTags = fileTree(dir: sourcePath, include: '**/*.js').collect {
+    String path = it.path.split(sourcePath)[1]
+    "<script type='text/javascript' src='/js/${path}'></script>"
+}.join('\n')
+
+import org.apache.tools.ant.filters.ReplaceTokens
+
+task template(type: Copy) {
+    from 'src/test/javaScript/index.htm'
+    into "${buildDir}/jsTest"
+    filter(ReplaceTokens, tokens: [specs: specTags, source: sourceTags])
+}
+
+task setupSpec(dependsOn: [copyJs, copyJsSpec, template]) << {}
+
+apply plugin: 'jetty'
+jettyRun {
+    webAppSourceDirectory = file("${buildDir}/jsTest")
+    contextPath = ''
+    httpPort = 9010
+    scanIntervalSeconds = 1
+}
+jettyRun.dependsOn = [watchThread, setupSpec]
