--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ dependencies {
     compile 'io.dropwizard:dropwizard-core:0.7.1'
     //jersey-client needed due to http://issues.gradle.org/browse/GRADLE-2647
     compile 'com.sun.jersey:jersey-client:1.18'
+
+    testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
+    testCompile 'io.dropwizard:dropwizard-testing:0.7.1'
 }
 
 run {
