--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ repositories {
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.3.4'
 
+    compile 'com.google.inject:guice:3.0'
+
     compile 'io.dropwizard:dropwizard-core:0.7.1'
     //jersey-client needed due to http://issues.gradle.org/browse/GRADLE-2647
     compile 'com.sun.jersey:jersey-client:1.18'
