--- a/build.gradle
+++ b/build.gradle
@@ -31,3 +31,22 @@ dependencies {
 run {
     args = ['server', 'app.yaml']
 }
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.bluepapa32:gradle-watch-plugin:0.1.3'
+        classpath 'com.eriwen:gradle-js-plugin:1.12.1'
+    }
+}
+
+apply plugin: 'watch'
+task watchThread() << {
+    Thread.start {
+        project.tasks.watch.execute()
+    }
+}
+
+apply from: 'scripts/dev.gradle'
